# unity-catalog-local

./: .gitignore  README.md  consume_data.py  generate_data.py  pyproject.toml  setup_uc_metadata.py
