[project]
name = "unitycatalog"
version = "0.1.0"
description = "A local Data Governance sandbox using Unity Catalog, DuckDB, and Python for automated metadata management."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "pandas>=3.0.1",
    "requests>=2.32.5",
]
